--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ fire = "^0.4.0"
 
 [tool.poetry.dev-dependencies]
 autopep8 = "^1.6.0"
+pylint = "^2.13.9"
+pytest = "^7.1.2"
 
 [[tool.poetry.source]]
 name = "tsinghua"
