--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ eyed3 = "^0.9.6"
 fire = "^0.5.0"
 requests = "^2.28.1"
 moviepy = "^1.0.3"
+pydub = "^0.25.1"
 
 [tool.poetry.dev-dependencies]
 autopep8 = "^1.6.0"
